--- a/KartingConfigServer/src/main/resources/application.properties
+++ b/KartingConfigServer/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8888
 spring.application.name=KartingConfigServer
+spring.cloud.config.server.git.uri=https://github.com/JosueUsach/KartingMicroServices.git
+spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.search-paths=config-data
