--- a/KartingTarifa/src/main/resources/application.properties
+++ b/KartingTarifa/src/main/resources/application.properties
@@ -1,2 +1,4 @@
+server.port=8001
 spring.application.name=KartingTarifa
 spring.config.import=configserver:http://localhost:8888
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
