--- a/config-data/KartingEurekaServer.yml
+++ b/config-data/KartingEurekaServer.yml
@@ -1,11 +1,9 @@
 server:
   port: 8761
 
-spring:
-  application:
-    name: KartingEurekaServer
-
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      default-zone: http://localhost:8761/eureka/
