--- a/config-data/KartingGatewayServer.yml
+++ b/config-data/KartingGatewayServer.yml
@@ -1,13 +1,50 @@
 server:
   port: 8080
 
-spring:
-  application:
-    name: KartingGatewayServer
+# Puede que tenga que poner instance: hostname: localhost
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
+spring:
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true
+        default-filters:
+          - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: '*'
+            allowedMethods: "*"
+            allowedHeaders: "*"
+
       routes:
+        - id: descuentoGrupo
+          uri: lb://KartingDescuentoGrupo
+          predicates:
+            - Path=/descuento-grupo/**
+        - id: descuentoFrecuencia
+          uri: lb://KartingDescuentoFrecuencia
+          predicates:
+            - Path=/descuento-frecuencia/**
+        - id: descuentoDiaEspecial
+          uri: lb://KartingDescuentoDiaEspecial
+          predicates:
+            - Path=/descuento-dia-especial/**
+        - id: rack
+          uri: lb://KartingRack
+          predicates:
+            - Path=/rack/**
+        - id: reporte
+          uri: lb://KartingReporte
+          predicates:
+           - Path=/reporte/**
         - id: tarifa
           uri: lb://KartingTarifa
           predicates:
