--- a/config-data/KartingTarifa.yml
+++ b/config-data/KartingTarifa.yml
@@ -1,15 +1,16 @@
 server:
-  port: 8081
+  port: ${SERVER_PORT}
+
+spring:
+  datasource:
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_DBNAME}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone:  http://${EUREKA:localhost}:8761/eureka
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-spring:
-  application:
-    name: KartingTarifa
+      defaultZone: http://localhost:8761/eureka/
