--- a/config-data/KartingTarifa.yml
+++ b/config-data/KartingTarifa.yml
@@ -4,6 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://${DB_HOST:mysql}:3306/tarifadb
+    username: root
+    password: copito
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 eureka:
