--- a/config-data/KartingTarifa.yml
+++ b/config-data/KartingTarifa.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:mysql}:3306/tarifadb
+    url: jdbc:mysql://localhost:3306/tarifadb
     username: root
     password: copito
     driver-class-name: com.mysql.cj.jdbc.Driver
