--- a/KartingGatewayServer/src/main/resources/application.properties
+++ b/KartingGatewayServer/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=KartingGatewayServer
 spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.enabled=true
