--- a/KartingReporte/src/main/resources/application.properties
+++ b/KartingReporte/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=KartingReporte
 spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.jpa.hibernate.ddl-auto = create
