--- a/config-data/KartingDescuentoFrecuencia.yml
+++ b/config-data/KartingDescuentoFrecuencia.yml
@@ -2,5 +2,17 @@ server:
   port: 8083
 
 spring:
-  application:
-    name: KartingDescuentoFrecuencia
+  datasource:
+    url: jdbc:mysql://localhost:3306/descuentofrecuencia
+    username: root
+    password: copito
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
