--- a/config-data/KartingDescuentoGrupo.yml
+++ b/config-data/KartingDescuentoGrupo.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/descuentogrupo
+    url: jdbc:mysql://localhost:3306/descuentogrupodb
     username: root
     password: copito
     driver-class-name: com.mysql.cj.jdbc.Driver
