--- a/config-data/KartingGatewayServer.yml
+++ b/config-data/KartingGatewayServer.yml
@@ -20,8 +20,8 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOrigins: '*'
-            allowedMethods: "*"
+            allowedOrigins: "http://localhost:5173"
+            allowedMethods: "GET,POST,PUT,DELETE,OPTIONS"
             allowedHeaders: "*"
 
       routes:
