--- a/config-data/KartingGatewayServer.yml
+++ b/config-data/KartingGatewayServer.yml
@@ -23,6 +23,7 @@ spring:
             allowedOrigins: "http://localhost:5173"
             allowedMethods: "GET,POST,PUT,DELETE,OPTIONS"
             allowedHeaders: "*"
+            allowCredentials: true
 
       routes:
         - id: descuentoGrupo
