--- a/KartingRack/src/main/resources/application.properties
+++ b/KartingRack/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=KartingRack
 spring.config.import=configserver:http://localhost:8888
 spring.cloud.config.enabled=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
