--- a/config-data/KartingReporte.yml
+++ b/config-data/KartingReporte.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8087
+  port: 0
 
 spring:
   datasource:
@@ -11,6 +11,7 @@ spring:
 eureka:
   instance:
     preferIpAddress: true
+    instanceId: ${spring.application.name}:${server.port}
   client:
     fetch-registry: true
     register-with-eureka: true
